--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,16 +1,34 @@
-main > .container {
+html,
+body {
+    height: 100%;
+}
+
+.wrap {
+    min-height: 100%;
+    height: auto;
+    margin: 0 auto -60px;
+    padding: 0 0 60px;
+}
+
+.wrap > .container {
     padding: 70px 15px 20px;
 }
 
 .footer {
-    background-color: #f5f5f5;
-    font-size: .9em;
     height: 60px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    padding-top: 20px;
 }
 
-.footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
+.jumbotron {
+    text-align: center;
+    background-color: transparent;
+}
+
+.jumbotron .btn {
+    font-size: 21px;
+    padding: 14px 24px;
 }
 
 .not-set {
@@ -20,24 +38,38 @@ main > .container {
 
 /* add sorting icons to gridview sort links */
 a.asc:after, a.desc:after {
-    content: '';
-    left: 3px;
+    position: relative;
+    top: 1px;
     display: inline-block;
-    width: 0;
-    height: 0;
-    border: solid 5px transparent;
-    margin: 4px 4px 2px 4px;
-    background: transparent;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    padding-left: 5px;
 }
 
 a.asc:after {
-    border-bottom: solid 7px #212529;
-    border-top-width: 0;
+    content: /*"\e113"*/ "\e151";
 }
 
 a.desc:after {
-    border-top: solid 7px #212529;
-    border-bottom-width: 0;
+    content: /*"\e114"*/ "\e152";
+}
+
+.sort-numerical a.asc:after {
+    content: "\e153";
+}
+
+.sort-numerical a.desc:after {
+    content: "\e154";
+}
+
+.sort-ordinal a.asc:after {
+    content: "\e155";
+}
+
+.sort-ordinal a.desc:after {
+    content: "\e156";
 }
 
 .grid-view th {
@@ -60,29 +92,165 @@ a.desc:after {
 
 /* align the logout "link" (button in form) of the navbar */
 .nav li > form > button.logout {
-    padding-top: 7px;
-    color: rgba(255, 255, 255, 0.5);
+    padding: 15px;
+    border: none;
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     .nav li > form > button.logout {
-        display:block;
+        display: block;
         text-align: left;
         width: 100%;
-        padding: 10px 0;
+        padding: 10px 15px;
     }
 }
 
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.75);
 }
 
 .nav > li > form > button.logout:focus {
     outline: none;
 }
 
-.form-group {
-    margin-bottom: 1rem;
+.dialog-messages {
+    padding: 10px;
+    max-height: 71vh;
+    min-height: 71vh;
+    transition: all 0.5s ease;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+.message {
+    margin-bottom: 10px;
+    z-index: -1;
+}
+
+.toggled {
+    display: block !important;
+}
+
+#page-content-wrapper,
+#sidebar-wrapper {
+    padding: 0;
+}
+
+.profile-view .pagination {
+    margin: 0;
+    padding: 0;
+}
+
+.profile-view .list-view .container {
+    padding: 0;
+}
+
+#user-avatar,
+.follower-avatar {
+    width: 100%;
+    object-fit: cover;
+}
+
+.follower-avatar {
+    height: 200px !important;
+}
+
+#user-avatar {
+    height: 293px;
+}
+
+.dialog-messages::-webkit-scrollbar,
+.user-conversations::-webkit-scrollbar {
+    width: 0.4em;
+    height: 0.4em;
+}
+
+.dialog-messages::-webkit-scrollbar-thumb,
+.user-conversations::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+/*left column in page display conversations*/
+.user-conversations {
+    max-height: 73vh;
+    min-height: 73vh;
+}
+
+.dialog-messages,
+.user-conversations {
+    overflow-y: auto;
+}
+
+.conversation-display .list-group-item {
+    height: 60px;
+    margin-bottom: 0;
+    border: none;
+    border-bottom: 1px solid #f7f7f7;
+    border-radius: unset !important;
+}
+
+.header {
+    padding: 5px 15px;
+    background-color: #eee;
+    height: 60px;
+}
+
+.header .buttons {
+    padding-top: 8px;
+}
+
+.side {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.reply {
+    height: 100%;
+    padding: 10px 15px;
+    background-color: #eee;
+}
+
+.reply .side {
+    height: 35px;
+}
+
+.reply button {
+    width: 100%;
+}
+
+.reply textarea {
+    width: 99%;
+    height: 35px;
+}
+
+.conversation-users,
+.conversations {
+    border: 1px solid rgba(0, 0, 0, .08);
+}
+
+.conversation {
+    border-right: 1px solid rgba(0, 0, 0, .08);
+}
+
+.conversation-users .header,
+.conversations .header {
+    font-size: 22px;
+    padding-top: 17px;
+}
+
+.conversation-users .list-group {
+    margin-bottom: 15px;
+    min-height: 75vh;
+}
+
+#new-conversation {
+    margin-bottom: 0;
+}
+
+#new-conversation .btn {
+    -webkit-border-radius: unset;
+    -moz-border-radius: unset;
+    border-radius: unset;
 }
